--- a/src/app/pages/go-live-page/go-live-page.component.html
+++ b/src/app/pages/go-live-page/go-live-page.component.html
@@ -49,7 +49,7 @@
             [clockwise]="false"
           ></circle-progress>
         </div>
-        <div class="circle-progress-individual">
+        <!-- <div class="circle-progress-individual">
           <div class="title">
             Total Tables
           </div>
@@ -63,7 +63,7 @@
           [showUnits]="false"
           [subtitle]="'Tables'"
           ></circle-progress>
-        </div>
+        </div> -->
 
       </div>
     </mat-grid-tile>
