--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -19,7 +19,7 @@
       <button mat-button class="sidebutton" [routerLink]="['/go-live']">Go Live</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/about']">About</button>
+      <button mat-button class="sidebutton" [routerLink]="['/analysis']">Analysis</button>
     </div>
   </mat-sidenav>
 
