--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -26,7 +26,7 @@
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'about']">About</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'analysis']">Analysis</button>
     </div>
 
     <div class="bottom-nav">
