event-mgmt-page: get all events of current account (not all events in db)

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -58,8 +58,8 @@
           [subtitle]="'Present'"
           [showUnits]="false"
         ></circle-progress>
-      </div> -->
-      <br><br>
+      </div>
+      <br><br> -->
       <h3>Event Schedule</h3>
       <div class="schedule-div">
         <img src="assets/schedule.png">
