1)Added Delete function on EventMgmtPage 2)Updated AddEventPage 2)Changed content of HomePage to schedule management(with basic view)

--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -41,12 +41,12 @@
     <mat-icon class="icon">search</mat-icon>
       <input matInput class="input" placeholder="Search Event Name" [(ngModel)]= "searchEventText"/>
   </div> -->
-  <a class="back-hint" [routerLink] = "['/event-mgmt']" *ngIf="!navbarIconShow">
+  <!-- <a class="back-hint" [routerLink] = "['/event-mgmt']" *ngIf="!navbarIconShow">
     Manage Other Events?
-  </a>
-  <button mat-icon-button (click) = "changeView()" *ngIf = "navbarIconShow">
+  </a> -->
+  <!-- <button mat-icon-button (click) = "changeView()" *ngIf = "navbarIconShow">
     <mat-icon>{{viewIcon}}</mat-icon>
-  </button>
+  </button> -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon class="profile-icon">perm_identity</mat-icon>
   </button>
