--- a/src/app/pages/add-event-page/add-event-page.component.html
+++ b/src/app/pages/add-event-page/add-event-page.component.html
@@ -13,15 +13,9 @@
           <input matInput name="name" class="" type="text" [(ngModel)] = "event.eventName">
         </mat-form-field>
 
-        <!-- <br>
-        <mat-form-field class="">
-          <mat-label>id</mat-label>
-          <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-        </mat-form-field> -->
-
         <br>
         <mat-form-field class="">
-          <mat-label>Date (Format: MM-DD-YYYY)</mat-label>
+          <mat-label>Date (Format: MM/DD/YYYY)</mat-label>
           <input matInput name="date" class="" type="text" [(ngModel)] = "event.eventDate" >
         </mat-form-field>
 
@@ -35,6 +29,18 @@
         <mat-form-field class="">
           <mat-label>Address</mat-label>
           <input matInput name="address" class="" type="text" [(ngModel)] = "event.eventaddress">
+        </mat-form-field>
+
+        <br>
+        <mat-form-field class="">
+          <mat-label>City</mat-label>
+          <input matInput name="city" class="" type="text" [(ngModel)] = "event.city">
+        </mat-form-field>
+
+        <br>
+        <mat-form-field class="">
+          <mat-label>Country</mat-label>
+          <input matInput name="country" class="" type="text" [(ngModel)] = "event.country">
         </mat-form-field>
 
         <br>
