--- a/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
+++ b/src/app/pages/event-mgmt-page/event-mgmt-page.component.html
@@ -1,6 +1,6 @@
 <app-toolbar (viewChange) = "changeView($event)" [pageName] = "pageName"></app-toolbar>
 <div class="page">
-  <div class="grid" *ngIf="isGrid; else listView">
+  <!-- <div class="grid" *ngIf="isGrid; else listView">
     <mat-card *ngFor="let event of items.events" class="card"  >
       <i class="material-icons event-icon"
          (click)="onSelect($event)"
@@ -9,10 +9,10 @@
        </i>
       <div class="event-title">{{event.name}}</div>
       <table class="content">
-        <!-- <tr>
+        <tr>
           <th width="20%">id:</th>
           <td width="80%">{{event.id}}</td>
-        </tr> -->
+        </tr>
         <tr>
           <th>date:</th>
           <td>{{event.date}}</td>
@@ -27,16 +27,16 @@
         </tr>
       </table>
       <mat-card-actions class="foot">
-        <!-- <i class="material-icons">create</i> -->
+         <i class="material-icons">create</i>
         <i class="material-icons">delete</i>
       </mat-card-actions>
     </mat-card>
     <div class="add-event" [routerLink]="['/add-event']">
       <div class="plus">+</div>
     </div>
-  </div>
+  </div> -->
 
-  <ng-template #listView>
+  <!-- <ng-template #listView> -->
     <div class="list">
       <div class="search-btn">
         <div class="new-evnt-btn">
@@ -45,26 +45,29 @@
       </div>
       <mat-table #table [dataSource]="dataSource">
         <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-          <mat-cell *matCellDef="let element"> Event {{element.eventName}} </mat-cell>
+          <mat-header-cell *matHeaderCellDef> Event Name </mat-header-cell>
+          <mat-cell *matCellDef="let element" (click)='select(element)'> {{element.eventName}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="date">
-          <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+          <mat-header-cell *matHeaderCellDef> Start Date </mat-header-cell>
+          <mat-cell *matCellDef="let element" (click)='select(element)'> {{element.date}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="venue">
           <mat-header-cell *matHeaderCellDef> Venue </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.venue}} </mat-cell>
+          <mat-cell *matCellDef="let element" (click)='select(element)'> {{element.venue}} </mat-cell>
         </ng-container>
-        <ng-container matColumnDef="description">
-          <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+          <mat-cell *matCellDef="let element">
+            <button mat-flat-button class="dele-button" color="warn" (click)="deleteEvent(element.eventId)">
+                   Delete
+            </button>
+          </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"
-                 (click)='selectRow(row)'>
+        <mat-row *matRowDef="let row; columns: displayedColumns;">
         </mat-row>
       </mat-table>
     </div>
-  </ng-template>
+  <!-- </ng-template> -->
 </div>
