--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -62,7 +62,55 @@
       <br><br> -->
       <h3>Event Schedule</h3>
       <div class="schedule-div">
-        <img src="assets/schedule.png">
+        <!-- <img src="assets/schedule.png"> -->
+        <!-- add schedule button -->
+        <form>
+          <mat-form-field class="">
+            <mat-label>Activity Name/Description</mat-label>
+            <input matInput name="description" class="" type="text" [(ngModel)] = "schedule.description">
+          </mat-form-field>
+
+          <br>
+          <mat-form-field class="">
+            <mat-label>Start Time</mat-label>
+            <input matInput name="startTime" class="" type="text" [(ngModel)] = "schedule.startTime" >
+          </mat-form-field>
+
+          <br>
+          <mat-form-field class="">
+            <mat-label>End Time</mat-label>
+            <input matInput name="endTime" class="" type="text" [(ngModel)] = "schedule.endTime" >
+          </mat-form-field>
+
+          <button mat-raised-button color="primary" (click)="addNewActivity()">Add Activity</button><br />
+        </form>
+
+        <!-- load schedule from db -->
+        <mat-table #table [dataSource]="dataSource">
+          <ng-container matColumnDef="StartTime">
+            <mat-header-cell *matHeaderCellDef> StartTime </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.startTime}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="EndTime">
+            <mat-header-cell *matHeaderCellDef> EndTime </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.endTime}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="Description">
+            <mat-header-cell *matHeaderCellDef> Name/Description </mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="Actions">
+            <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
+            <mat-cell *matCellDef="let element">
+              <button mat-mini-fab class="edit-dele-button" color="warn" (click)="deleteSchedule(element.scheduleId)">
+                       Delete
+              </button>
+            </mat-cell>
+          </ng-container>
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+
       </div>
     <!-- </div> -->
   </mat-sidenav-content>
