--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 /* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; */
 //
 @import "~ngx-toastr/toastr.css";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 
 body{
   font-family: Roboto;
