--- a/src/app/components/analysis-heatmap/analysis-heatmap.component.html
+++ b/src/app/components/analysis-heatmap/analysis-heatmap.component.html
@@ -1,3 +1,3 @@
-<div class="heatmap" id="map-canvas" style="width: 1000px;height: 500px;cursor:pointer;position:relative; background-color:black;">
+<div class="heatmap" id="map-canvas">
     haha it's map
 </div>
