--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -42,53 +42,12 @@
 
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-    <!-- <div class="page">
-      <h3>Number of People Present</h3>
-      <div class="chart">
-        <circle-progress
-          [title]="84"
-          [percent]="85"
-          [radius]="100"
-          [outerStrokeWidth]="16"
-          [innerStrokeWidth]="8"
-          [outerStrokeColor]="'#78C000'"
-          [innerStrokeColor]="'#C7E596'"
-          [animation]="true"
-          [animationDuration]="300"
-          [subtitle]="'Present'"
-          [showUnits]="false"
-        ></circle-progress>
-      </div>
-      <br><br> -->
       <h3>Event Schedule</h3>
       <div class="schedule-div">
         <!-- <img src="assets/schedule.png"> -->
-        <!-- add schedule button -->
-        <form>
-          <mat-form-field class="">
-            <mat-label>Activity Name/Description</mat-label>
-            <input matInput name="description" class="" type="text" [(ngModel)] = "schedule.description">
-          </mat-form-field>
 
-          <br>
-          <mat-form-field class="">
-            <mat-label>Start Time</mat-label>
-            <input matInput name="startTime" class="" type="text" [(ngModel)] = "schedule.startTime"
-            [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1">
-            <owl-date-time #dt1></owl-date-time>
-          </mat-form-field>
-
-          <br>
-          <mat-form-field class="">
-            <mat-label>End Time</mat-label>
-            <input matInput name="endTime" class="" type="text" [(ngModel)] = "schedule.endTime"
-            [owlDateTime]="dt2" [owlDateTimeTrigger]="dt2">
-            <owl-date-time #dt2></owl-date-time>
-          </mat-form-field>
-
-          <button mat-raised-button color="primary" (click)="addNewActivity()">Add Activity</button><br />
-        </form>
-
+        <button mat-raised-button color="primary" [routerLink]="['/',eventId,'home','add-schedule']">Add Schedule</button><br />
+        <br />
         <!-- load schedule from db -->
         <mat-table #table [dataSource]="dataSource">
           <ng-container matColumnDef="StartTime">
@@ -106,7 +65,7 @@
           <ng-container matColumnDef="Actions">
             <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
             <mat-cell *matCellDef="let element">
-              <button mat-mini-fab class="edit-dele-button" color="warn" (click)="deleteSchedule(element.scheduleId)">
+              <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteSchedule(element.scheduleId)">
                        Delete
               </button>
             </mat-cell>
@@ -116,6 +75,5 @@
         </mat-table>
 
       </div>
-    <!-- </div> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
