--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -11,11 +11,11 @@
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Dashboard</button>
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Schedule</button>
     </div>
-    <div class="sidediv" >
+    <!-- <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
-    </div>
+    </div> -->
     <div class="sidediv" >
       <button mat-raised-button color="primary" class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
