--- a/src/app/pages/add-schedule-page/add-schedule-page.component.scss
+++ b/src/app/pages/add-schedule-page/add-schedule-page.component.scss
@@ -51,13 +51,9 @@
     }
 }
 .sidenav-content{
-  margin-top:3em;
-  .page{
-    margin: auto 2em auto 2em;
-    width: 100%;
-    .schedule-div{
-      padding: 0 0 3em 2em;
-    }
+  //margin-top:3em;
+  .page-container{
+    margin: 1em;
   }
 }
 
