--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -1,14 +1,19 @@
-<app-toolbar [pageName] = "pageName"></app-toolbar>
-<br>
+<!-- <app-toolbar [pageName] = "pageName"></app-toolbar> -->
 <mat-sidenav-container class="sidenav-container">
   <!-- Navigation Bar-->
   <mat-sidenav mode="side" opened class="sidenav">
-    <div class="sidediv" >
-      <button mat-raised-button [routerLink]="['/',eventId,'home']">Dashboard</button>
+    <div class="navlogo">
+      <img src="assets/logo.png" width="40" height="30"/>
+      <div class="navlogo-text">
+        Smart Event
+      </div>
     </div>
     <div class="sidediv" >
+      <button mat-button class="sidebutton" [routerLink]="['/',eventId,'home']">Schedule</button>
+    </div>
+    <!-- <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
-    </div>
+    </div> -->
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
@@ -19,8 +24,22 @@
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'go-live']">Go Live</button>
     </div>
     <div class="sidediv" >
-      <button mat-button class="sidebutton" color="primary" [routerLink]="['/',eventId,'analysis']">Analysis</button>
+      <button mat-raised-button class="sidebutton" color="primary" [routerLink]="['/',eventId,'analysis']">Analysis</button>
     </div>
+
+    <div class="bottom-nav">
+      <button mat-button class="back-hint" [routerLink] = "['/event-mgmt']">
+        Other Events
+      </button>
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon class="profile-icon">perm_identity</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" [overlapTrigger]="false">
+        <button mat-menu-item [routerLink] = "['/change-pwd']">Change Password</button>
+        <button mat-menu-item [routerLink] = "['/login']">Log out</button>
+      </mat-menu>
+    </div>
+
   </mat-sidenav>
 
   <!-- Main Content-->
