--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -9,11 +9,11 @@
       </div>
     </div>
     <div class="sidediv" >
-      <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'home']">Dashboard</button>
+      <button mat-raised-button class="chosenButton" [routerLink]="['/',eventId,'home']">Schedule</button>
     </div>
-    <div class="sidediv" >
+    <!-- <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'speaker']">Speaker</button>
-    </div>
+    </div> -->
     <div class="sidediv" >
       <button mat-button class="sidebutton" [routerLink]="['/',eventId,'attendees']">Attendees</button>
     </div>
@@ -42,38 +42,39 @@
 
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
-      <h3>Event Schedule</h3>
-      <div class="schedule-div">
-        <!-- <img src="assets/schedule.png"> -->
+      <div class="page-container">
+        <h3>Event Schedule</h3>
+        <div class="schedule-div">
+          <!-- <img src="assets/schedule.png"> -->
 
-        <button mat-raised-button color="primary" [routerLink]="['/',eventId,'home','add-schedule']">Add Schedule</button><br />
-        <br />
-        <!-- load schedule from db -->
-        <mat-table #table [dataSource]="dataSource">
-          <ng-container matColumnDef="StartTime">
-            <mat-header-cell *matHeaderCellDef> StartTime </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.startTime}} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="EndTime">
-            <mat-header-cell *matHeaderCellDef> EndTime </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.endTime}} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="Description">
-            <mat-header-cell *matHeaderCellDef> Name/Description </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="Actions">
-            <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
-            <mat-cell *matCellDef="let element">
-              <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteSchedule(element.scheduleId)">
-                       Delete
-              </button>
-            </mat-cell>
-          </ng-container>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-
+          <button mat-raised-button color="primary" [routerLink]="['/',eventId,'home','add-schedule']">Add Schedule</button><br />
+          <br />
+          <!-- load schedule from db -->
+          <mat-table #table [dataSource]="dataSource">
+            <ng-container matColumnDef="StartTime">
+              <mat-header-cell *matHeaderCellDef> StartTime </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.startTime}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="EndTime">
+              <mat-header-cell *matHeaderCellDef> EndTime </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.endTime}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Description">
+              <mat-header-cell *matHeaderCellDef> Name/Description </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{element.description}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Actions">
+              <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                <button mat-stroked-button class="edit-dele-button" color="warn" (click)="deleteSchedule(element.scheduleId)">
+                         Delete
+                </button>
+              </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
+        </div>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
