--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -51,13 +51,10 @@
     }
 }
 .sidenav-content{
-  margin-top:3em;
-  .page{
-    margin: auto 2em auto 2em;
+  //margin-top:3em;
+  .page-container{
+    margin: 1em;
     width: 100%;
-    .schedule-div{
-      padding: 0 0 3em 2em;
-    }
   }
 }
 
