--- a/src/app/components/analysis-heatmap/analysis-heatmap.component.html
+++ b/src/app/components/analysis-heatmap/analysis-heatmap.component.html
@@ -1,3 +1,14 @@
-<div class="heatmap" id="map-canvas">
-    haha it's map
-</div>
+  <mat-slider *ngIf="schedulesArrayCome"
+      class="program-slider"
+      [max]="max"
+      [min]="min"
+      [step]="1"
+      [tickInterval]="auto"
+      thumbLabel
+      [displayWith]="formatLabel"
+      [(ngModel)]="programChosen">
+  </mat-slider>
+
+  <div class="heatmap" id="map-canvas">
+      haha it's map
+  </div>
