--- a/src/app/components/analysis-heatmap/analysis-heatmap.component.css
+++ b/src/app/components/analysis-heatmap/analysis-heatmap.component.css
@@ -1,6 +1,6 @@
 .heatmap{
-  /* width: 1000px;
-  height: 500px; */
+  width: 1000px;
+  height: 500px;
   cursor:pointer;
   position:relative;
   /* background-color:black; */
