--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -131,6 +131,7 @@
           [showXAxisLabel]="true"
           [showYAxisLabel]="true"
           [yScaleMax]="80"
+          [yScaleMin]="70"
           [xAxisLabel]="'Program'"
           [yAxisLabel]="'Number of Participants Present'">
           </ngx-charts-line-chart>
