--- a/src/app/pages/analysis-page/analysis-page.component.html
+++ b/src/app/pages/analysis-page/analysis-page.component.html
@@ -143,7 +143,7 @@
             Tracking
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="level">
+        <div class="heatmap">
           <app-analysis-heatmap></app-analysis-heatmap>
         </div>
       </mat-expansion-panel>
